Fix for dropdown behavior on mobile
See reference here:
http://stackoverflow.com/questions/13902734/bootstrap-cant-click-dropdow
n-child-menu-items-on-mobile-and-first-click-not

--- a/css/style.css
+++ b/css/style.css
@@ -320,3 +320,7 @@ h3.route-text:hover {
   }
 
 }
+
+.dropdown-backdrop {
+  position: static;
+}
